# vm-proto

./: .gitignore  Cargo.toml  Makefile
contracts/funlink/: Cargo.toml  Makefile
contracts/funlink/src/: lib.rs  linked_bkp.rs  linked_list.rs
contracts/minimal_counter/: Cargo.toml
contracts/minimal_counter/src/: lib.rs  vm.rs
contracts/plutocracy/: Cargo.toml
contracts/plutocracy/src/: lib.rs
contracts/register/: Cargo.toml  Makefile
contracts/register/src/: lib.rs
src/: abi.rs  definitions.rs  host.rs  lib.rs  scratch.rs
src/abi/: ffi_store.rs  helpers.rs  mod.rs
tests/: linkfun.rs  pluto.rs
