[package]
name = "vm-proto"
version = "0.1.0"
edition = "2018"

[dependencies]
bytecheck = { version = "0.6.5", optional = true }
rkyv = { version = "0.7.20", default-features = false, features = ["archive_le"] }
thiserror = "1.0.30"
wasmer = { version = "2.0.0", optional = true }
wee_alloc = "0.4.5"
microkelvin = { path = "../microkelvin", default-features = false }

[dev-dependencies]
plutocracy = { path = "contracts/plutocracy" }
funlink = { path = "contracts/funlink" }

[features]
default = ["host"]
host = ["wasmer", "bytecheck", "rkyv/validation", "rkyv/std"]
