[package]
name = "funlink"
version = "0.1.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rkyv = { version = "0.7", default-features = false, features = ["size_32", "archive_le"] }
vm-proto = { path = "../..", default-features = false }
microkelvin = { path = "../../../microkelvin", default-features = false }